--- a/events_app/package.json
+++ b/events_app/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6"
+    "eslint-config-next": "13.1.6",
+    "sass": "^1.58.3"
   }
 }
